# Pomodoro_App

./: .gitignore  CMakeLists.txt  Feedback_Kushal.md  Feedback_Mradul.md  README.md  vcpkg.json
include/: app.h  exceptions.h  notifier.h  timer.h
main/: main.cpp
src/: app.cpp  main.cpp  notifier.cpp  timer.cpp
tests/: timer_tests.cpp
